--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.21",
@@ -24,13 +25,18 @@
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "npm": "^10.8.2",
     "react": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.8"
   },
