--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
+    "@shopify/react-native-skia": "^1.3.10",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
+    "clsx": "^2.1.1",
     "expo": "~51.0.25",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -31,18 +33,24 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
+    "victory-native": "^37.0.3-next.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-table-component": "^1.2.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
