--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~51.0.25",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-color-matrix-image-filters": "^7.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
