--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-matrix-image-filters": "^7.0.1",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
