--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "expo": "~51.0.25",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
@@ -35,7 +37,10 @@
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.0",
     "react-native-color-matrix-image-filters": "^7.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gifted-charts": "^1.4.30",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
@@ -47,7 +52,8 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
