--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
