--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.25",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -34,9 +35,11 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-matrix-image-filters": "^7.0.1",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
@@ -48,8 +51,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8",
-    "react-native-pager-view": "6.3.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
