--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "npm": "^10.8.2",
     "react": "18.2.0",
@@ -52,13 +53,13 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8",
-    "lottie-react-native": "6.7.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-table-component": "^1.2.8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
