--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,css,scss,html}'"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
