feat: implemented dashboard layout and study progress layout

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "leadlly.student.mobileapp",
-    "slug": "leadlly.student.mobileapp",
+    "name": "Leadlly",
+    "slug": "Leadlly",
     "version": "1.0.0",
     "scheme": "leadlly-student-app",
     "orientation": "portrait",
