--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.0",
     "react-native-color-matrix-image-filters": "^7.0.1",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gifted-charts": "^1.4.30",
     "react-native-otp-textinput": "^1.1.6",
