--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -20,6 +21,7 @@
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.25",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
