--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-circular-progress": "^1.4.0",
     "react-native-gifted-charts": "^1.4.30",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-render-html": "^6.3.4",
