--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-web-browser": "~13.0.3",
+    "expo-dev-client": "~4.0.26"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
