--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-redux": "^9.1.2",
     "zod": "^3.23.8",
     "expo-web-browser": "~13.0.3",
-    "expo-dev-client": "~4.0.26"
+    "expo-dev-client": "~4.0.26",
+    "expo-system-ui": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
