--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,css,scss,html}'"
   },
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -26,6 +27,7 @@
     "expo": "~51.0.25",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
     "expo-linear-gradient": "~13.0.2",
@@ -33,6 +35,8 @@
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "install": "^0.13.0",
     "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
@@ -54,9 +58,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.8",
-    "expo-web-browser": "~13.0.3",
-    "expo-dev-client": "~4.0.26",
-    "expo-system-ui": "~3.0.7"
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
