--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.8",
-    "react-native-pager-view": "6.3.0"
+    "react-native-pager-view": "6.3.0",
+    "expo-notifications": "~0.28.17",
+    "expo-device": "~6.0.2",
+    "expo-task-manager": "~11.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
