--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-redux": "^9.1.2",
+    "use-debounce": "^10.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
