--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nativewind": "^2.0.11",
     "npm": "^10.8.2",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1306.0",
