--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -64,7 +65,8 @@
     "react-native-ui-datepicker": "^2.0.4",
     "react-redux": "^9.1.2",
     "use-debounce": "^10.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
