--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -51,7 +51,9 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1306.0",
     "react-native-circular-progress": "^1.4.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.30",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-pager-view": "6.3.0",
     "react-native-progress": "^5.0.1",
@@ -65,8 +67,7 @@
     "react-native-ui-datepicker": "^2.0.4",
     "react-redux": "^9.1.2",
     "use-debounce": "^10.0.3",
-    "zod": "^3.23.8",
-    "react-native-gesture-handler": "~2.16.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
