--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-native-ui-datepicker": "^2.0.4",
     "react-redux": "^9.1.2",
     "use-debounce": "^10.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-updates": "~0.25.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
