--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@shopify/react-native-skia": "^1.3.10",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "expo": "~51.0.25",
