--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-task-manager": "~11.8.2",
+    "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
     "install": "^0.13.0",
     "lottie-react-native": "6.7.0",
@@ -66,9 +67,9 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-ui-datepicker": "^2.0.4",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1",
     "use-debounce": "^10.0.3",
-    "zod": "^3.23.8",
-    "expo-updates": "~0.25.27"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
